@@ -1653,6 +1653,13 @@ Bugzilla   : 16450
 Description: Constify instances of struct {lu,dt,md}_device_operations.
 Details    : Constify instances of struct {lu,dt,md}_device_operations.
 
+Severity   : normal
+Bugzilla   : 16450
+Description: Introduce struct md_site and move meta-data specific parts of
+	     struct lu_site here.
+Details    : Move md-specific fields out of struct lu_site into special struct 
+        md_site, so that lu_site can be used on a client.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
